# mcp-bear-notes

./: .dockerignore  .gitignore  Dockerfile  INSTALLATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  TESTING.md  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: docker-build-README.md  docker-build.yml
src/mcp_bear_notes/: __init__.py  bear_client.py  server.py
