[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-bear-notes"
version = "0.1.0"
description = "MCP server for Bear Notes integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "YOUR_NAME" }
]
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
mcp-bear-notes = "mcp_bear_notes.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_bear_notes"]